--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,7 @@
 
     <properties>
              <maven.compiler.source> 1.6 </maven.compiler.source>
+             <maven.compiler.target> 1.6 </maven.compiler.target>
     </properties>
     <build>
         <plugins>
