--- a/.github/workflows/try.yml
+++ b/.github/workflows/try.yml
@@ -19,4 +19,4 @@ jobs:
         java-version: '11'
         distribution: 'adopt'
     - name: Build with Maven
-      run: mvn -B exec:java 
+      run: mvn -X -B exec:java 
